# MiniHack_GTAV

./: CMakeLists.txt  MiniHack.cpp  MiniHack.h  main.cpp
module/: CMakeLists.txt
module/hack/: CMakeLists.txt  hack.h
module/memory/: CMakeLists.txt  memory.cpp  memory.h  patternBatch.cpp  patternBatch.hpp
